--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width:1400px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -11,6 +11,7 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -39,4 +40,10 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.pokemon-grid {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap:10px;
 }
